Fix header link and post content

--- a/themes/osseous/layouts/partials/navbar.html
+++ b/themes/osseous/layouts/partials/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar">
     <div class="navbar-body container">
     <div class="nav-item-logo">
-        <a href="#"><span class="text-medium text-uppercase text-wide">{{ .Site.Title }}</span></a>
+        <a href="{{ .Site.BaseURL }}"><span class="text-medium text-uppercase text-wide">{{ .Site.Title }}</span></a>
     </div>
     <div class="nav-small-menu">
         <a class="nav-item" title="Open Menu" href="javascript:openSidebar()">
