--- a/themes/osseous/layouts/post/single.html
+++ b/themes/osseous/layouts/post/single.html
@@ -3,12 +3,15 @@
 {{ partial "navbar.html" . }}
 <article>
 
-  <div id="description" class="row section">
+  <div id="description" class="row section margin-top-large">
     <div class="container">
       <h2>{{ .Title }}</h2>
       <p>
         <span class="post-meta">{{ .Date.Format "Jan 2, 2006" }} by {{ .Params.author }}</span><br>
         {{ $baseurl := .Site.BaseURL }}
+      </p>
+      <p>
+        {{ .Content }}
       </p>
       <p class="post-meta">{{ i18n "tags" }}:&nbsp;
         {{ range $i, $e := .Params.tags }}
@@ -16,7 +19,6 @@
             <a href="{{ $baseurl }}{{ $.Site.LanguagePrefix }}/tags/{{ . }}">{{ . }}</a>
         {{ end }}
       </p>
-
     </div>
   </div>
 
