Set default background color

--- a/themes/osseous/layouts/partials/head.html
+++ b/themes/osseous/layouts/partials/head.html
@@ -35,6 +35,7 @@
     <meta itemprop="image" content="{{ .Site.BaseURL }}/img/skull-200x200.png">
 
     <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/osseous.min.css">
+    <link rel="stylesheet" href="https://amdelamar.com/css/style.min.css">
     <title>{{ .Title }} - {{ .Site.Title }}</title>
 </head>
 <body>
