--- a/themes/osseous/layouts/404.html
+++ b/themes/osseous/layouts/404.html
@@ -1,17 +1,14 @@
 {{ partial "head.html" . }}
 {{ partial "sidebar.html" . }}
 {{ partial "navbar.html" . }}
-<article>
-
-  <div id="description" class="row section">
+<article id="404">
+  <div class="row section">
     <div class="container">
       <h2>404</h2>
       <p>
           File Not Found
       </p>
-
     </div>
   </div>
-
 </article>
 {{ partial "footer.html" . }}
