--- a/themes/osseous/layouts/partials/navbar.html
+++ b/themes/osseous/layouts/partials/navbar.html
@@ -10,24 +10,9 @@
         </a>
     </div>
     <div class="nav-group nav-large-menu text-bold">
-        <a class="nav-item" href="#download">Download</a>
-    		<div class="nav-item dropdown">
-    		  <a href="#examples">Examples &#9662;</a>
-    		  <div class="dropdown-body border background-lightgrey text-left">
-      			<a href="#root">Root Variables</a>
-      			<a href="#typography">Typography</a>
-      			<a href="#columns">Columns</a>
-      			<a href="#tables">Tables</a>
-      			<a href="#buttons">Buttons</a>
-            <a href="#tabs">Tabs</a>
-            <a href="#dropdowns">Dropdowns</a>
-      			<a href="#forms">Forms</a>
-            <a href="#navbar">Navbar</a>
-            <a href="#sidebar">Sidebar</a>
-            <a href="#utility">Utility Classes</a>
-    		  </div>
-    		</div>
-        <a class="nav-item" href="{{ .Site.BaseURL }}/about/">About</a>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}category/">Category</a>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}tags/">Tags</a>
+        <a class="nav-item" href="https://amdelamar.com">About</a>
     </div>
     </div>
 </nav>
