--- a/themes/osseous/layouts/partials/footer.html
+++ b/themes/osseous/layouts/partials/footer.html
@@ -1,15 +1,12 @@
 <!-- Footer at bottom -->
 <footer class="row section text-center">
-    <p><small><em>&#169; <a href="https://amdelamar.com">AustinDelamar</a> - 2017-2018</em></small></p>
-    <a class="button button-primary float-right margin-right-large" title="Back to top" href="javascript:gotoTop()">Back to Top</a>
+  <p><small><em>&#169; <a href="https://amdelamar.com">AustinDelamar</a> - 2014-2019</em></small></p>
+  <a class="button button-primary float-right margin-right-large" title="Back to top" href="javascript:gotoTop()">Back to Top</a>
+  <!-- Lazy load JavaScript, just for sidebar popup -->
+  <script type="text/javascript" src="{{ .Site.BaseURL }}js/osseous.min.js"></script>
+  <!-- Highlightjs for color coding -->
+  <script src="{{ .Site.BaseURL }}highlightjs/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </footer>
-
-<!-- Lazy load JavaScript, just for sidebar popup -->
-<script type="text/javascript" src="/js/osseous.min.js"></script>
-
-<!-- Highlightjs for color coding -->
-<script src="/highlightjs/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-
 </body>
 </html>
