--- a/themes/osseous/layouts/partials/head-index.html
+++ b/themes/osseous/layouts/partials/head-index.html
@@ -37,6 +37,6 @@
 
     <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/osseous.min.css">
     <link rel="stylesheet" href="https://amdelamar.com/css/style.min.css">
-    <title>{{ .Title }} - {{ .Site.Title }}</title>
+    <title>{{ .Site.Title }}</title>
 </head>
 <body>
