--- a/themes/osseous/layouts/partials/sidebar.html
+++ b/themes/osseous/layouts/partials/sidebar.html
@@ -6,26 +6,8 @@
         </a>
     </div>
     <div class="nav-list text-center" onclick="closeSidebar()">
-        <a class="nav-item" href="#download">Download</a>
-        <div class="nav-item">
-    		  <a href="#examples">Examples &#9662;</a>
-    		  <div class="nav-list padding margin-top border-top border-bottom">
-      			<a class="nav-item" href="#root">Root Variables</a>
-      			<a class="nav-item" href="#typography">Typography</a>
-      			<a class="nav-item" href="#columns">Columns</a>
-      			<a class="nav-item" href="#tables">Tables</a>
-      			<a class="nav-item" href="#buttons">Buttons</a>
-            <a class="nav-item" href="#tabs">Tabs</a>
-            <a class="nav-item" href="#dropdowns">Dropdowns</a>
-      			<a class="nav-item" href="#forms">Forms</a>
-      			<a class="nav-item" href="#navbar">Navbar</a>
-            <a class="nav-item" href="#sidebar">Sidebar</a>
-            <a class="nav-item" href="#utility">Utility Classes</a>
-    		  </div>
-    		</div>
-        <a class="nav-item" href="#about">About</a>
-    </div>
-    <div class="padding-top-large full-width text-center">
-        <p class="text-small"><em>© <a href="https://amdelamar.com">AustinDelamar</a> - 2017-2018</em></p>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}category/">Category</a>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}tags/">Tags</a>
+        <a class="nav-item" href="https://amdelamar.com">About</a>
     </div>
 </nav>
