--- a/themes/osseous/layouts/post/summary.html
+++ b/themes/osseous/layouts/post/summary.html
@@ -1,16 +1,15 @@
-<div>
-  <p class="">
-    <span class="float-right">{{ .Date.Format "Jan 2, 2006" }}</span>
+<div id="{{ .File.BaseFileName }}" class="padding">
+  <span class="float-right text-secondary">{{ .Date.Format "Jan 2, 2006" }}</span>
+  <h4 class="margin-none">
     <a href="{{ .Permalink }}">
-      <h3>{{ .Title }} {{ if .Draft }}(draft){{end}}</h3>
-    </a>
+    {{ .Title }} {{ if .Draft }}(draft){{end}}</a>
+  </h4>
+  <p class="margin-none">
+    {{ .Description }}
   </p>
-  <p>
-    {{ .Summary }}
+  <p id="post-metadata" class="text-secondary margin-none">
+    <span id="category">Category: <a href="{{ $.Site.BaseURL }}category/{{ .Params.category | urlize }}" class="text-secondary">{{ .Params.category }}</a></span>&nbsp;|&nbsp;
+    <span id="tags">Tags:
+    {{ range $i, $e := .Params.tags }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL }}tags/{{ . | urlize }}" class="text-secondary">{{ . }}</a>{{ end }}</span>
   </p>
-  {{ $baseurl := .Site.BaseURL }}
-  <p>{{ i18n "tags" }}:&nbsp;
-  {{ range $i, $e := .Params.tags }}
-    {{if $i}}, {{end}}<a href="{{ $baseurl }}{{ $.Site.LanguagePrefix }}/tags/{{ . }}">{{ . }}</a>
-  {{ end }}</p>
 </div>
