Fix head and metadata

--- a/themes/osseous/layouts/index.html
+++ b/themes/osseous/layouts/index.html
@@ -1,4 +1,4 @@
-{{ partial "head.html" . }}
+{{ partial "head-index.html" . }}
 {{ partial "sidebar.html" . }}
 {{ partial "navbar.html" . }}
 <article id="home">
