--- a/themes/osseous/layouts/post/single.html
+++ b/themes/osseous/layouts/post/single.html
@@ -1,4 +1,4 @@
-{{ partial "head.html" . }}
+{{ partial "head-post.html" . }}
 {{ partial "sidebar.html" . }}
 {{ partial "navbar.html" . }}
 <article id="post">
