--- a/themes/osseous/layouts/404.html
+++ b/themes/osseous/layouts/404.html
@@ -2,11 +2,13 @@
 {{ partial "sidebar.html" . }}
 {{ partial "navbar.html" . }}
 <article id="404">
-  <div class="row section">
+  <div class="row section text-center">
     <div class="container">
-      <h2>404</h2>
+      <h1>404</h1>
       <p>
-          File Not Found
+        File Not Found.
+        <br/>
+        Looks like the page you've requested is no longer available, or was moved.
       </p>
     </div>
   </div>
