--- a/themes/osseous/layouts/partials/navbar.html
+++ b/themes/osseous/layouts/partials/navbar.html
@@ -1,5 +1,4 @@
-<!-- Navbar -->
-<nav class="navbar">
+<nav id="navbar" class="navbar" aria-label="page navigation">
     <div class="navbar-body container">
     <div class="nav-item-logo">
         <a href="{{ .Site.BaseURL }}"><span class="text-medium text-uppercase text-wide">{{ .Site.Title }}</span></a>
