--- a/themes/osseous/layouts/404.html
+++ b/themes/osseous/layouts/404.html
@@ -1,10 +1,10 @@
 {{ partial "head.html" . }}
 {{ partial "sidebar.html" . }}
 {{ partial "navbar.html" . }}
-<article id="404">
+<article id="{{ .File.BaseFileName }}">
   <div class="row section text-center">
     <div class="container">
-      <h1>404</h1>
+      <h1>{{ .File.BaseFileName }}</h1>
       <p>
         File Not Found.
         <br/>
