--- a/themes/osseous/layouts/category/list.html
+++ b/themes/osseous/layouts/category/list.html
@@ -1,21 +1,19 @@
 {{ partial "head.html" . }}
 {{ partial "sidebar.html" . }}
 {{ partial "navbar.html" . }}
-<article id="list">
+<article id="categories">
   <div class="row section margin-top-large">
     <div class="container">
       <h2>{{ .Title }}</h2>
-      <ul>
-        {{ $taxonomy := .Site.Taxonomies.category }}
-        {{ range $key, $value := $taxonomy }}
-        <li><a class="text-secondary text-medium" href="{{ $.Site.BaseURL }}/category/{{ $key | urlize }}">{{ $key }}</a></li>
-          <ul>
-          {{ range $value.Pages }}
-            <li><a href="{{ .Permalink}}" class="text-medium"> {{ .LinkTitle }} </a> </li>
-          {{ end }}
-          </ul>
+      {{ $taxonomy := .Site.Taxonomies.category }}
+      {{ range $key, $value := $taxonomy }}
+      <a class="text-bold" href="{{ $.Site.BaseURL }}/category/{{ $key | urlize }}">{{ $key }}</a>
+        <ul>
+        {{ range $value.Pages }}
+          <li><a href="{{ .Permalink}}" class="text-secondary"> {{ .LinkTitle }} </a> </li>
         {{ end }}
-      </ul>
+        </ul>
+      {{ end }}
     </div>
   </div>
 </article>
