--- a/themes/osseous/layouts/partials/sidebar.html
+++ b/themes/osseous/layouts/partials/sidebar.html
@@ -1,5 +1,4 @@
-<!-- Sidebar -->
-<nav id="sidebarMenu" class="sidebar border-right shadow-right">
+<nav id="sidebarMenu" class="sidebar border-right shadow-right" aria-label="page navigation">
     <div class="nav-item-close">
         <a class="float-right" title="Close Menu" href="javascript:closeSidebar()" aria-label="Close">
             <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M2.757 14.657L8 9.414l5.243 5.243 1.414-1.414L9.414 8l5.243-5.243-1.414-1.414L8 6.586 2.757 1.343 1.343 2.757 6.586 8l-5.243 5.243z" fill-rule="evenodd"></path></svg>
