--- a/themes/osseous/layouts/partials/navbar.html
+++ b/themes/osseous/layouts/partials/navbar.html
@@ -1,7 +1,10 @@
 <nav id="navbar" class="navbar" aria-label="page navigation">
     <div class="navbar-body container">
     <div class="nav-item-logo">
-        <a href="{{ .Site.BaseURL }}"><span class="text-medium text-uppercase text-wide">{{ .Site.Title }}</span></a>
+        <a href="{{ .Site.BaseURL }}">
+          <img class="round shade margin-right" src="https://amdelamar.com/img/me.jpg" height="45" alt="{{ .Site.Title }} Logo" />
+          <span class="text-medium">{{ .Site.Title }}</span>
+        </a>
     </div>
     <div class="nav-small-menu">
         <a class="nav-item" title="Open Menu" href="javascript:openSidebar()">
@@ -9,9 +12,15 @@
         </a>
     </div>
     <div class="nav-group nav-large-menu text-bold">
-        <a class="nav-item" href="{{ $.Site.BaseURL }}/category/">Category</a>
-        <a class="nav-item" href="{{ $.Site.BaseURL }}/tags/">Tags</a>
-        <a class="nav-item" href="https://amdelamar.com">About</a>
+        <div class="nav-item dropdown">
+          <a href="#examples">Blog ▾</a>
+          <div class="dropdown-body border background-lightgrey text-left">
+            <a href="{{ $.Site.BaseURL }}">All Posts</a>
+            <a href="{{ $.Site.BaseURL }}/category/">Categories</a>
+            <a href="{{ $.Site.BaseURL }}/tags/">Tags</a>
+          </div>
+        </div>
+        <a class="nav-item" href="https://amdelamar.com#about">About</a>
     </div>
     </div>
 </nav>
