--- a/themes/osseous/layouts/post/single.html
+++ b/themes/osseous/layouts/post/single.html
@@ -4,13 +4,20 @@
 <article id="post">
   <div class="row section margin-top-large">
     <div class="container">
-      <h2>{{ .Title }}</h2>
+      <h2>
+        {{ .Title }}
+        {{ if .Draft }}<span title="This is unpublished" class="text-secondary">[Draft]</span>{{end}}
+      </h2>
+      <p class="margin-none text-secondary">
+        &nbsp;(&nbsp;<span id="read-time" title="time to read">{{ math.Round (div (.Content | countwords) 130.0) }} min read</span>&nbsp;)&nbsp;
+      </p>
       <p>
         {{ .Content | markdownify }}
       </p>
       <br/>
       <p id="post-metadata" class="text-secondary">
-        <span id="date" title="{{ dateFormat "02 Jan 06 15:04 MST" .Date.Local }}">Published: {{ .Date.Format "Jan 2, 2006" }}</span> by <span id="author">{{ .Params.author }}</span><br/>
+        {{ if .Draft }}<span id="draft" title="This is unpublished">[Draft]</span>{{end}}<br/>
+        <span id="date" title="{{ dateFormat "02 Jan 06 15:04 MST" .Date.Local }}">Published: {{ .Date.Format "Jan 2, 2006" }}</span><br/>
         <span id="category">Category: <a href="{{ $.Site.BaseURL }}/category/{{ .Params.category | urlize }}" class="text-secondary">{{ .Params.category }}</a></span><br/>
         <span id="tags">Tags:
         {{ range $i, $e := .Params.tags }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL }}/tags/{{ . | urlize }}" class="text-secondary">{{ . }}</a>{{ end }}</span>
