--- a/themes/osseous/layouts/post/summary.html
+++ b/themes/osseous/layouts/post/summary.html
@@ -1,10 +1,12 @@
 <div id="{{ .File.BaseFileName }}" class="padding">
   <span class="float-right text-secondary" title="{{ dateFormat "02 Jan 06 15:04 MST" .Date.Local }}">{{ .Date.Format "Jan 2, 2006" }}</span>
   <h4 class="margin-none">
-    <a href="{{ .Permalink }}">
-    {{ .Title }} {{ if .Draft }}(draft){{end}}</a>
+    <a href="{{ .Permalink }}" {{ if .Draft }}class="text-secondary" title="This is unpublished"{{end}}>
+      {{ .Title | truncate 60 }}
+      {{ if .Draft }}<span title="This is unpublished" class="text-secondary">[Draft]</span>{{end}}
+    </a>
   </h4>
-  <p class="margin-none">
+  <p class="margin-none {{ if .Draft }}text-secondary{{end}}">
     {{ with .Page.Params.Description }}
       {{ . }}
     {{ else }}
@@ -12,8 +14,9 @@
     {{ end }}
   </p>
   <p id="post-metadata" class="text-secondary margin-none">
-    <span id="category">Category: <a href="{{ $.Site.BaseURL }}/category/{{ .Params.category | urlize }}" class="text-secondary">{{ .Params.category }}</a></span>&nbsp;|&nbsp;
-    <span id="tags">Tags:
+    <span id="read-time" title="time to read">{{ math.Round (div (.Content | countwords) 130.0) }} min</span>&nbsp;|&nbsp;
+    <span id="category" title="category">Category: <a href="{{ $.Site.BaseURL }}/category/{{ .Params.category | urlize }}" class="text-secondary">{{ .Params.category }}</a></span>&nbsp;|&nbsp;
+    <span id="tags" title="tags">Tags:
     {{ range $i, $e := .Params.tags }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL }}/tags/{{ . | urlize }}" class="text-secondary">{{ . }}</a>{{ end }}</span>
   </p>
 </div>
