--- a/themes/osseous/layouts/partials/sidebar.html
+++ b/themes/osseous/layouts/partials/sidebar.html
@@ -5,8 +5,15 @@
         </a>
     </div>
     <div class="nav-list text-center" onclick="closeSidebar()">
-        <a class="nav-item" href="{{ $.Site.BaseURL }}/category/">Category</a>
+        <a class="nav-item" href="https://amdelamar.com">
+          <img class="round shade margin-right" style="vertical-align: middle" src="img/me.jpg" width="24" height="24" title="A picture of me" />
+          Austin Delamar</a>
+        <hr class="full-width margin-none"/>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}">All Posts</a>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}/category/">Categories</a>
         <a class="nav-item" href="{{ $.Site.BaseURL }}/tags/">Tags</a>
-        <a class="nav-item" href="https://amdelamar.com">About</a>
+        <hr class="full-width margin-none"/>
+        <a class="nav-item" href="https://amdelamar.com/#about">About</a>
+        <a class="nav-item" href="https://amdelamar.com/#contact">Contact</a>
     </div>
 </nav>
