--- a/themes/osseous/layouts/partials/sidebar.html
+++ b/themes/osseous/layouts/partials/sidebar.html
@@ -6,7 +6,7 @@
     </div>
     <div class="nav-list text-center" onclick="closeSidebar()">
         <a class="nav-item" href="https://amdelamar.com">
-          <img class="round shade margin-right" style="vertical-align: middle" src="https://amdelamar.com/img/me.jpg" width="24" height="24" title="A picture of me" />
+          <img class="round shade margin-right" style="vertical-align: middle" src="https://amdelamar.com/img/amdelamar.jpeg" width="24" height="24" title="A picture of me" />
           Austin Delamar</a>
         <hr class="full-width margin-none"/>
         <a class="nav-item" href="{{ $.Site.BaseURL }}">All Posts</a>
