--- a/themes/osseous/layouts/partials/sidebar.html
+++ b/themes/osseous/layouts/partials/sidebar.html
@@ -1,19 +1,28 @@
-<nav id="sidebarMenu" class="sidebar border-right shadow-right" aria-label="page navigation">
+<input type="checkbox" id="toggleSidebar" style="display: none;">
+<nav id="sidebar" class="border-right shadow-right" aria-label="page navigation">
     <div class="nav-item-close">
-        <a class="float-right" title="Close Menu" href="javascript:closeSidebar()" aria-label="Close">
+      <label class="clickable" for="toggleSidebar">
+        <span class="float-right" title="Close Menu" aria-label="Close">
             <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M2.757 14.657L8 9.414l5.243 5.243 1.414-1.414L9.414 8l5.243-5.243-1.414-1.414L8 6.586 2.757 1.343 1.343 2.757 6.586 8l-5.243 5.243z" fill-rule="evenodd"></path></svg>
-        </a>
+        </span>
+      </label>
     </div>
-    <div class="nav-list text-center" onclick="closeSidebar()">
+    <div class="nav-list text-center">
         <a class="nav-item" href="https://amdelamar.com">
           <img class="round shade margin-right" style="vertical-align: middle" src="https://amdelamar.com/img/amdelamar.jpeg" width="24" height="24" title="A picture of me" />
           Austin Delamar</a>
-        <hr class="full-width margin-none"/>
-        <a class="nav-item" href="{{ $.Site.BaseURL }}">All Posts</a>
-        <a class="nav-item" href="{{ $.Site.BaseURL }}/category/">Categories</a>
-        <a class="nav-item" href="{{ $.Site.BaseURL }}/tags/">Tags</a>
-        <hr class="full-width margin-none"/>
+        <details class="nav-item">
+    		  <summary>Blog</summary>
+    		  <div class="nav-list padding margin-top border-top border-bottom">
+            <a class="nav-item" href="{{ $.Site.BaseURL }}">All Posts</a>
+            <a class="nav-item" href="{{ $.Site.BaseURL }}/category/">Categories</a>
+            <a class="nav-item" href="{{ $.Site.BaseURL }}/tags/">Tags</a>
+    		  </div>
+    		</details>
         <a class="nav-item" href="https://amdelamar.com/#about">About</a>
         <a class="nav-item" href="https://amdelamar.com/#contact">Contact</a>
+    </div>
+    <div class="padding-top-large full-width text-center">
+        <p class="text-small"><em>© <a href="https://amdelamar.com">AustinDelamar</a> - 2017-2018</em></p>
     </div>
 </nav>
