Remove Highlightjs and enable Chroma

--- a/themes/osseous/layouts/partials/head-post.html
+++ b/themes/osseous/layouts/partials/head-post.html
@@ -35,6 +35,9 @@
 
     <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/osseous.min.css">
     <link rel="stylesheet" href="https://amdelamar.com/css/style.min.css">
+    <style>
+      pre > code { background: none; }
+    </style>
     <title>{{ .Title }} - {{ .Site.Title }}</title>
 </head>
 <body>
