Fix typo in thumbnail

--- a/themes/osseous/layouts/partials/head-post.html
+++ b/themes/osseous/layouts/partials/head-post.html
@@ -16,22 +16,22 @@
     <meta property="og:type" content="article">
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="{{ .Title }}">
-    {{ if isset .Params "thumbnail" }}<meta property="og:image" content="{{ .Params.Thumbnail }}">{{ end }}
-    {{ if isset .Params "description" }}<meta property="og:description" content="{{ .Params.description }}">{{ end }}
-    {{ if isset .Params "author" }}<meta property="article:author" content="{{ .Params.Author }}"/>{{ end }}
+    {{ if isset .Params "thumbnail" }}<meta property="og:image" content="{{ .Params.thumbnail }}">{{ else }}{{ end }}
+    {{ if isset .Params "description" }}<meta property="og:description" content="{{ .Params.description }}">{{ else }}{{ end }}
+    {{ if isset .Params "author" }}<meta property="article:author" content="{{ .Params.Author }}"/>{{ else }}{{ end }}
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="{{ .Permalink }}">
-    {{ if isset .Params "author" }}<meta name="twitter:creator" content="@{{ .Params.twitterUsername }}">{{ end }}
+    {{ if isset .Params "author" }}<meta name="twitter:creator" content="@{{ .Params.twitterUsername }}">{{ else }}{{ end }}
     <meta name="twitter:title" content="{{ .Title }}">
-    {{ if isset .Params "description" }}<meta name="twitter:description" content="{{ .Params.description }}">{{ end }}
-    {{ if isset .Params "thumbnail" }}<meta name="twitter:image" content="{{ .Params.Thumbnail }}">{{ end }}
+    {{ if isset .Params "description" }}<meta name="twitter:description" content="{{ .Params.description }}">{{ else }}{{ end }}
+    {{ if isset .Params "thumbnail" }}<meta name="twitter:image" content="{{ .Params.thumbnail }}">{{ else }}{{ end }}
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{ .Title }}">
-    {{ if isset .Params "description" }}<meta itemprop="description" content="{{ .Params.description }}">{{ end }}
-    {{ if isset .Params "thumbnail" }}<meta itemprop="image" content="{{ .Params.Thumbnail }}">{{ end }}
+    {{ if isset .Params "description" }}<meta itemprop="description" content="{{ .Params.description }}">{{ else }}{{ end }}
+    {{ if isset .Params "thumbnail" }}<meta itemprop="image" content="{{ .Params.thumbnail }}">{{ else }}{{ end }}
 
     <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/osseous.min.css">
     <link rel="stylesheet" href="https://amdelamar.com/css/style.min.css">
