Remove blog dropdown

--- a/themes/osseous/layouts/partials/navbar.html
+++ b/themes/osseous/layouts/partials/navbar.html
@@ -14,14 +14,7 @@
       </label>
     </div>
     <div class="nav-group nav-large-menu text-bold">
-    		<div class="nav-item dropdown">
-    		  <a href="#docs">Blog &#9662;</a>
-    		  <div class="dropdown-body border background-lightgrey text-left">
-            <a href="{{ $.Site.BaseURL }}">All Posts</a>
-            <a href="{{ $.Site.BaseURL }}/category/">Categories</a>
-            <a href="{{ $.Site.BaseURL }}/tags/">Tags</a>
-    		  </div>
-    		</div>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}">Blog</a>
         <a class="nav-item" href="https://amdelamar.com/#about">About</a>
     </div>
     </div>
