--- a/themes/osseous/layouts/partials/sidebar.html
+++ b/themes/osseous/layouts/partials/sidebar.html
@@ -11,14 +11,7 @@
         <a class="nav-item" href="https://amdelamar.com">
           <img class="round shade margin-right" style="vertical-align: middle" src="https://amdelamar.com/img/amdelamar.jpeg" width="24" height="24" title="A picture of me" />
           Austin Delamar</a>
-        <details class="nav-item">
-    		  <summary>Blog</summary>
-    		  <div class="nav-list padding margin-top border-top border-bottom">
-            <a class="nav-item" href="{{ $.Site.BaseURL }}">All Posts</a>
-            <a class="nav-item" href="{{ $.Site.BaseURL }}/category/">Categories</a>
-            <a class="nav-item" href="{{ $.Site.BaseURL }}/tags/">Tags</a>
-    		  </div>
-    		</details>
+        <a class="nav-item" href="{{ $.Site.BaseURL }}">Blog</a>
         <a class="nav-item" href="https://amdelamar.com/#about">About</a>
         <a class="nav-item" href="https://amdelamar.com/#contact">Contact</a>
     </div>
