--- a/themes/osseous/layouts/post/summary.html
+++ b/themes/osseous/layouts/post/summary.html
@@ -8,15 +8,14 @@
   </h4>
   <p class="margin-none {{ if .Draft }}text-secondary{{end}}">
     {{ with .Page.Params.Description }}
-      {{ . }}
+      {{ . | truncate 250 }}
     {{ else }}
-      {{ .Summary }}
+      {{ .Summary | truncate 250 }}
     {{ end }}
   </p>
   <p id="post-metadata" class="text-secondary margin-none">
-    <span id="read-time" title="time to read">{{ math.Round (div (.Content | countwords) 130.0) }} min</span>&nbsp;|&nbsp;
-    <span id="category" title="category">Category: <a href="{{ $.Site.BaseURL }}/category/{{ .Params.category | urlize }}" class="text-secondary">{{ .Params.category }}</a></span>&nbsp;|&nbsp;
-    <span id="tags" title="tags">Tags:
-    {{ range $i, $e := .Params.tags }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL }}/tags/{{ . | urlize }}" class="text-secondary">{{ . }}</a>{{ end }}</span>
+    <span id="read-time" title="avg time to read">{{ math.Round (div (.Content | countwords) 130.0) }} min</span>
+    {{ if and (isset .Params "category") (ne .Params.category "") }}&nbsp;|&nbsp;<span id="category" title="category">Category: <a href="{{ $.Site.BaseURL }}/category/{{ .Params.category | urlize }}" class="text-secondary">{{ .Params.category }}</a></span>{{ else }}{{ end }}
+    {{ if isset .Params "tags" }}{{ $tagsSize := len .Params.tags }}{{ if gt $tagsSize 0 }}&nbsp;|&nbsp;<span id="tags" title="tags">Tags: {{ range $i, $e := .Params.tags }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL }}/tags/{{ . | urlize }}" class="text-secondary">{{ . }}</a>{{ end }}</span>{{ else }}{{ end }}{{ end }}
   </p>
 </div>
