--- a/themes/osseous/layouts/partials/head-post.html
+++ b/themes/osseous/layouts/partials/head-post.html
@@ -33,6 +33,7 @@
     {{ if isset .Params "description" }}<meta itemprop="description" content="{{ .Params.description }}">{{ else }}{{ end }}
     {{ if isset .Params "thumbnail" }}<meta itemprop="image" content="{{ .Params.thumbnail }}">{{ else }}{{ end }}
 
+    <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/index.xml" />
     <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/osseous.min.css">
     <link rel="stylesheet" href="https://amdelamar.com/css/style.min.css">
     <style>
