--- a/themes/osseous/layouts/partials/head-post.html
+++ b/themes/osseous/layouts/partials/head-post.html
@@ -21,7 +21,7 @@
     {{ if isset .Params "author" }}<meta property="article:author" content="{{ .Params.Author }}"/>{{ else }}{{ end }}
 
     <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="{{ .Permalink }}">
     {{ if isset .Params "author" }}<meta name="twitter:creator" content="@{{ .Params.twitterUsername }}">{{ else }}{{ end }}
     <meta name="twitter:title" content="{{ .Title }}">
