--- a/themes/osseous/layouts/partials/navbar.html
+++ b/themes/osseous/layouts/partials/navbar.html
@@ -2,7 +2,7 @@
     <div id="navbar-body" class="container">
     <div class="nav-item-logo">
       <a href="{{ .Site.BaseURL }}">
-        <img class="round shade margin-right" src="https://amdelamar.com/img/amdelamar.jpeg" height="45" alt="{{ .Site.Title }} Logo" />
+        <img class="round shade margin-right" src="https://amdelamar.com/img/adelamar.jpeg" height="45" alt="{{ .Site.Title }} Logo" />
         <span class="text-medium">{{ .Site.Title }}</span>
       </a>
     </div>
