--- a/themes/osseous/layouts/partials/sidebar.html
+++ b/themes/osseous/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
     </div>
     <div class="nav-list text-center">
         <a class="nav-item" href="https://amdelamar.com">
-          <img class="round shade margin-right" style="vertical-align: middle" src="https://amdelamar.com/img/amdelamar.jpeg" width="24" height="24" title="A picture of me" />
+          <img class="round shade margin-right" style="vertical-align: middle" src="https://amdelamar.com/img/adelamar.jpeg" width="24" height="24" title="A picture of me" />
           Austin Delamar</a>
         <a class="nav-item" href="{{ $.Site.BaseURL }}">Blog</a>
         <a class="nav-item" href="https://amdelamar.com/#about">About</a>
